namespace eLeague_Manager.Boundary;

public class PantallaRegistro
{
    public void Menu()
    {
        Console.WriteLine(" MENU ");
    }

    public string? PedirInfo()
    {
        string? input = Console.ReadLine();
        return input;
    }
}