namespace eLeague_Manager.Entities;

public class Amateur
{
    public string CentroEstudios { get; set; }
}