namespace eLeague_Manager.Entities;

public abstract class Jugador
{
    public string Nombre { get; set; }
    public string Alias { get; set; }
    public string Nivel { get; set; }
}