namespace eLeague_Manager.Entities;

public class PerfilEstadisticas
{
    public int PartidosGanados { get; set; }
    public int PartidosPerdidos { get; set; }
}