namespace eLeague_Manager.Interfaces;

public interface IEntrevistable
{
    void DarDeclaraciones();
}